
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Add ability to import/export Policy Templates, as well as a base export/import processor class
- [#6242] Actions on regular Resources break with Custom Resource Class extended fields
- [#6096] Fix issue where reload token in Resource create would not allow save after validation
- [#6238] Fix rendering issue when opening multiple quick create resource windows at once
- Fix various issues with TV input and output renders by properly objectifying them into base abstract classes
- [#5763] Allow for 3rd-level deep category nesting
- [#6215] Fix issues with derivative resources and non-standard manager themes
- [#6237] Add ability to sort users by active status in mgr grid
- [#6197] Refresh old and new context caches when moving Resource
- Update to xPDO 2.2.1-pl
- [#6080] Fix revert to default properties on Source Properties grid
- [#6204] Fix issue where multiple languages could not be loaded per page in the lexicon
- [#6196] Ensure that MODx.Browser view updates when changing a media source from dropdown in tree
- [#6198] Fix issue with saving user groups on a new user that caused duplicate role saving
- [#6159] Implement OnBeforeUserActivate, OnUserActivate, OnBeforeUserDeactivate, and OnUserDeactivate events
- [#6063] Add extra settings and checks to allow for better handling of manager CSS/JS minification on servers that do not allow DOCUMENT_ROOT access
- [#6147] Fix element processors not firing proper events and passing wrong variables to plugins.
- [#6060] Fix issue where resources were getting class_key of modResource rather than modDocument
- [#6030] Fix issue where alt attribute was duplicated on image output renders
- [#6122] Clarify text for removing a dashboard widget from a dashboard